# pokisona

./: .gitignore  Cargo.toml  clippy.toml  flake.nix  rustfmt.toml
.helix/: languges.toml
pokisona/: Cargo.toml
pokisona-markdown/: Cargo.toml  markdown.pest
pokisona-markdown/src/: lib.rs
pokisona/src/: app.rs  color.rs  command.rs  config.rs  file_store.rs  main.rs  markdown_store.rs  markdown_view.rs  widget.rs  window.rs
pokisona/src/widget/: theme.rs
src/: app.rs  cli.rs  command.pest  command.rs  command_history.rs  config.rs  default-config.toml  error.rs  file_store.rs  iced_helpers.rs  main.rs  markdown.pest  markdown.rs  mode.rs  pane_state.rs  test.md  theme.rs  view.rs  widget.rs  window.rs
src/markdown/: markdown.pest  mod.rs  parsing.rs  sesbian_lexer.rs  store.rs  view.rs
src/view/: iced_helpers.rs  markdown.rs  theme.rs
src/widget/: theme.rs
