[package]
name = "pokisona"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: switch back to crates.io itertools when https://github.com/rust-itertools/itertools/pull/1071 is merged
iced = { version = "0.14", features = [
  "smol",
  "advanced",
  "wgpu",
  "crisp",
  # I personally don't use x11, make an issue if you do
  # "x11",
  "wayland",
], default-features = false }
catppuccin = "2.6.0"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.48", features = ["cargo", "derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
smol = "2.0.2"
dashmap = "6.1.0"
figment = { version = "0.10.19", features = ["toml"] }
pest_derive = { version = "2.8.3", features = ["grammar-extras"] }
pest = "2.8.3"
bitflags = "2.10.0"
url = "2.5.7"
open = "5.3.2"
camino = "1.2.1"
itertools = "0.14.0"
iced_selection = "0.4.0"
lucide-icons = { version = "0.562.0" }
